Korjattu vanhat Choicebox-elementit LisaaSuoritusGuiView.fxml-tiedostosta Comboboxeiksi.